<resources>
    <string name="app_name">王者体育</string>
    <string name="home">首页</string>
    <string name="live">直播</string>
    <string name="about">关注</string>
    <string name="review">点评</string>
    <string name="me">我的</string>
    <string name="search_game_home">搜游戏/主播/房间号</string>
    <string name="network_break">网络已断开</string>
    <string name="network_break_click_update">请链接网络后，点击空白刷新</string>
    <string name="search_game_html">搜游戏网站</string>
    <string name="become_anchor">成为主播</string>
    <string name="get_gem">获取钻石</string>
    <string name="gem">钻石</string>
    <string name="personal_information">个人资料</string>
    <string name="my_message">我的消息</string>
    <string name="account_settings">账号设置</string>
    <string name="task_center">任务中心</string>
    <string name="withdrawal_application">取款申请</string>
    <string name="fund_record">资金记录</string>
    <string name="release_record">发布记录</string>
    <string name="setting">设置</string>
    <string name="see_details">查看详情</string>
    <string name="all_reminders">全部提醒</string>
    <string name="security_privacy">安全与隐私</string>
    <string name="network_four_g">允许3G/4G环境观看直播</string>
    <string name="little_window">退出直播间时小窗口播放</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="clear_cach">清除缓存</string>
    <string name="check_updata">检查更新</string>
    <string name="already_new_version">当前已经是最新版本</string>
    <string name="about_me">关于我们</string>
    <string name="y">硬件解码</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_error">清除失败</string>
    <string name="off_the_stocks">已完成</string>
    <string name="on_the_stocks">未完成</string>
    <string name="receive_award">领取奖励</string>
    <string name="phone_number">手机号</string>
    <string name="bind_weChat">绑定微信</string>
    <string name="email">邮箱</string>
    <string name="replace">更换</string>
    <string name="feedback_help">如果您有任何建议或者意见请发送给我们吧！</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="anchor">主播</string>
    <string name="more">更多>></string>
    <string name="video">视频</string>
    <string name="news">资讯</string>
    <string name="history_record">历史记录</string>
    <string name="popular_searches">热门搜索</string>
    <string name="search_content_cannot_empty">搜索内容不能为空</string>
    <string name="click_exit">再按一次返回桌面</string>
    <string name="about1">关于</string>
    <string name="version_name">版本号:V%1$s</string>
    <string name="login">登录</string>
    <string name="pleass_input_phone">请输入手机号</string>
    <string name="pleass_input_password">请输入密码</string>
    <string name="pleass_input_password1">输入6位以上字母数字组合的密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password1">忘记密码？</string>
    <string name="cannot_receive_verification_code">收不到验证码?</string>
    <string name="registered">注册</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="agree_agreement_register">同意协议并注册</string>
    <string name="king_agree_register">已阅读并同意《王者体育直播用户协议》</string>
    <string name="reacquire_code">重新获取验证码</string>
    <string name="has_been_sent">已发送(%1$s)</string>
    <string name="phone_number_cannot_empty">手机号不能为空</string>
    <string name="verification_code_cannot_empty">验证码不能为空</string>
    <string name="pleass_send_verification_code">请先发送验证码校验</string>
    <string name="nickname_cannot_empty">昵称不能为空</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="level_status">等级状态</string>
    <string name="level_task_complete">完成任务获取更高等级</string>
    <string name="online_number">在线总天数</string>
    <string name="get_share">获得分享</string>
    <string name="gift">赠送礼物</string>
    <string name="receive_gift">收到礼物</string>
    <string name="number_fans">粉丝数量</string>
    <string name="live_number">直播次数</string>
    <string name="post_video">发布视频</string>
    <string name="send_article">发布文章</string>
    <string name="avatar">头像</string>
    <string name="fill_in">填写</string>
    <string name="nickname">昵称</string>
    <string name="actual_name">真实姓名</string>
    <string name="gender">性别</string>
    <string name="select">选择</string>
    <string name="signature">签名</string>
    <string name="date_birth">出生日期</string>
    <string name="wechat_number">微信号</string>
    <string name="email_address">邮箱地址</string>
    <string name="album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="want_broadcast_live">我要直播</string>
    <string name="take_video">拍个视频</string>
    <string name="release_dynamics">发布动态</string>
    <string name="check_in">签到</string>
    <string name="king">王者号</string>
    <string name="recent_attention">最近关注</string>
    <string name="more_recommendations">更多推荐</string>
    <string name="video_record">视频记录</string>
    <string name="load_more">加载更多</string>
    <string name="article_record">文章记录</string>
    <string name="read_full_story">阅读全文</string>
    <string name="confirm">确定</string>
    <string name="accessibility">权限申请</string>
    <string name="not_obtainable">由于王者体育直播无法获得</string>
    <string name="open_access_path">权限，不能正常运行，请开启权限在使用王者体育直播\n设置路径：设置->应用->王者体育直播->权限</string>
    <string name="not_obtainable1">当前王者体育直播没有</string>
    <string name="open_access_path1">权限，请到当前设备管理应用或设置中开启\n设置路径：设置->应用->王者体育直播->权限</string>
    <string name="after_registration_you_can">更多精彩等你来</string>
    <string name="register_now">赶紧注册吧！</string>
    <string name="chat_interaction">聊天互动</string>
    <string name="more_live_broadcasts">更多直播</string>
    <string name="focus_on_the_anchor">关注主播</string>
    <string name="quick_registration">快速注册</string>
    <string name="four_g_help">当前网络为4G网络，是否继续播放</string>
    <string name="four_g_error">当前网络为4G网络，请先设置允许3G/4G网络视频播放</string>
    <string name="not_network">暂无网络链接，请检查网络链接状况</string>
    <string name="continue_loading">继续加载</string>
    <string name="error">oh买噶！\n它系不系灰到月球了鸭？</string>
    <string name="confirm_the_changes">确认修改</string>
    <string name="code_contact_service">收不到验证码？联系客服</string>
    <string name="start_content">赛事全 美女陪 总有你想看的赛事 - 互动体育直播平台</string>
    <string name="start_subscript">Copyright © 2018-2019 王者体育直播</string>
    <string name="no_data">暂无数据</string>
    <string name="start_down">开始下载</string>
    <string name="save">保存</string>
    <string name="sign_out">退出账号</string>
    <string name="ok_to_log_out">确定要退出账号？</string>
    <string name="clear_wait">确定清除缓存？</string>
    <string name="no_install_wx">未安装微信，请先安装微信再进行分享操作</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">分享取消</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qq_circle">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="copy_link">复制链接</string>
    <string name="no_install_qq">未安装QQ，请先安装QQ再进行分享操作</string>
    <string name="no_install_wb">未安装微博，请先安装微博再进行分享操作</string>
    <string name="copy_success">复制成功</string>
    <string name="send_success">发送成功</string>
    <string name="confidentiality">保密</string>
    <string name="change_success">修改成功</string>
    <string name="grade">等级：</string>
    <string name="upload_success">上传成功</string>
    <string name="subscription">订阅: </string>
    <string name="upload_video">上传视频</string>
    <string name="take_video1">拍一个</string>
    <string name="take_video_help">1.请保证视频文件大小100M以内\n2.请勿上传色情，反动等违法视频，若经发现将严厉处理\n3.一旦将视频提交到王者体育直播，即表示您同意遵守王者体育直播服务条款和准则。\n4.请勿侵犯他人的版权或者隐私权。</string>
    <string name="title">标题</string>
    <string name="description">说明</string>
    <string name="video_class">视频分类</string>
    <string name="upload_vodeo_help">将会出现在公开的视频搜索结果中</string>
    <string name="add_details">添加详细信息</string>
    <string name="title_cannot_empty">标题不能为空</string>
    <string name="select_class">请选择分类</string>
    <string name="bind">绑定</string>
    <string name="replace_success">更换成功</string>
    <string name="account_prompt">请确认是否保存</string>
    <string name="range_white">美白范围</string>
    <string name="range_buffing">磨皮范围</string>
    <string name="range_ruddy">红润范围</string>
    <string name="range_bigeye">大眼范围</string>
    <string name="range_thinface">瘦脸范围</string>
    <string name="range_shortenface">收下巴范围</string>
    <string name="range_cheekpink">腮红范围</string>
    <string name="beauty_setting">美颜设置</string>
    <string name="push_sdk_error">SDK错误，需重新启动</string>
    <string name="push_system_error">系统错误，即将推出直播，需重新启动</string>
    <string name="push_start_push">开始直播</string>
    <string name="push_restarted_push">直播重启成功</string>
    <string name="add_dynamic_failed">添加贴纸失败</string>
    <string name="modify_phone_number">修改手机号</string>
    <string name="setting_avatar">设置头像</string>
    <string name="subscribe_anchor">订阅主播</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="setting_avatar_content">账号设置中完成头像设置</string>
    <string name="subscribe_anchor_content">订阅超过一位主播</string>
    <string name="bind_wechat_content">账号设置中绑定您的微信</string>
    <string name="bind_email_content">账号设置中完成您的邮箱填写</string>
    <string name="input_feedback">请输入您的宝贵意见</string>
    <string name="submit_success">提交成功</string>
    <string name="check_in_success">签到成功</string>
    <string name="live_title">直播标题</string>
    <string name="input_live_title">请输入标题...</string>
    <string name="room_type">房间类型</string>
    <string name="live_type">直播类型</string>
    <string name="live_class">分类</string>
    <string name="setting_password">请设置密码...</string>
    <string name="diamond_minute">1钻石/分钟</string>
    <string name="live_config">直播配置</string>
    <string name="input_email">请输入邮箱地址</string>
    <string name="receive">领取成功</string>
    <string name="time_coin">钻石/分钟</string>
    <string name="setting_money">请输入金额...</string>
    <string name="setting_select_money">请选择金额...</string>
    <string name="coin">钻石</string>
    <string name="discover_new_version">发现新版本,点击更新</string>
    <string name="new_now_version">最新版本</string>
    <string name="save_help_content">内容发生改变，是否继续退出？</string>
    <string name="click_check_in">点击签到</string>
    <string name="not_anchor_prompt">您当前不是主播，请先申请成为主播后再开始直播！</string>
    <string name="not_searched">未搜索到相关内容</string>
    <string name="time">时间：</string>
    <string name="look_number">观看人数：</string>
    <string name="last_time">最近在线时间：</string>
    <string name="fan">粉丝:</string>
    <string name="new1">新</string>
    <string name="hot">热</string>
    <string name="volume">音量:</string>
    <string name="not_logged_in">未登录</string>
    <string name="brightness">亮度</string>
    <string name="download_now">正在下载中</string>
    <string name="my_quiz">我的竞猜</string>
    <string name="bet_amount">投注钻石</string>
    <string name="betting">投注</string>
    <string name="registered_account">注册账号</string>
    <string name="video_select_other">很抱歉，暂时无法获取直播画面\n请您选择其他赛事观看</string>
</resources>
