<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activity.login.RegisteredActivity">
    <include layout="@layout/activity_top_red"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50dp"
        android:paddingLeft="@dimen/d15dp"
        android:paddingRight="@dimen/d15dp"
        android:layout_marginTop="50dp">
        <CheckBox
            android:id="@+id/tv_area_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/TextGrayStyle16sp"
            android:button="@null"
            android:checked="false"
            android:enabled="false"
            android:text="+86"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="@null"
            android:layout_marginLeft="@dimen/d20dp"
            android:layout_toRightOf="@+id/tv_area_code"
            style="@style/TextBlack1Style17sp"
            android:textColorHint="@color/gray9"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/pleass_input_phone"/>
    </RelativeLayout>
    <View
        style="@style/HorizontalBoundaryStyle"
        android:layout_marginRight="@dimen/d15dp"
        android:layout_marginLeft="@dimen/d15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50dp"
        android:paddingLeft="@dimen/d15dp"
        android:paddingRight="@dimen/d15dp">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50dp"
            android:gravity="center_vertical"
            android:background="@null"
            style="@style/TextBlack1Style17sp"
            android:textColorHint="@color/gray9"
            android:inputType="number"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/tv_verification_code"
            android:hint="@string/input_verification_code"/>
        <TextView
            android:id="@+id/tv_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ft_gray_circle"
            style="@style/TextRedStyle12sp"
            android:textColor="@color/gray11"
            android:text="@string/send_verification_code"
            android:paddingLeft="@dimen/d10dp"
            android:paddingRight="@dimen/d10dp"
            android:paddingTop="@dimen/d5dp"
            android:paddingBottom="@dimen/d5dp"/>
    </RelativeLayout>

    <View
        style="@style/HorizontalBoundaryStyle"
        android:layout_marginRight="@dimen/d15dp"
        android:layout_marginLeft="@dimen/d15dp"/>
    <EditText
        android:id="@+id/et_nickName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50dp"
        android:gravity="center_vertical"
        android:background="@null"
        android:layout_marginLeft="@dimen/d15dp"
        android:layout_marginRight="@dimen/d15dp"
        style="@style/TextBlack1Style17sp"
        android:textColorHint="@color/gray9"
        android:singleLine="true"
        android:hint="@string/input_nickname"/>
    <View
        style="@style/HorizontalBoundaryStyle"
        android:layout_marginRight="@dimen/d15dp"
        android:layout_marginLeft="@dimen/d15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d50dp"
        android:layout_marginRight="@dimen/d15dp"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50dp"
            android:gravity="center_vertical"
            android:background="@null"
            android:layout_marginLeft="@dimen/d15dp"
            style="@style/TextBlack1Style17sp"
            android:textColorHint="@color/gray9"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/eye"
            android:hint="@string/pleass_input_password1"/>
        <ImageView
            android:id="@+id/eye"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/d15dp"
            android:src="@drawable/password_selector"/>

    </RelativeLayout>

    <View
        style="@style/HorizontalBoundaryStyle"
        android:layout_marginRight="@dimen/d15dp"
        android:layout_marginLeft="@dimen/d15dp"/>
    <Button
        android:id="@+id/tv_registered"
        style="@style/BtRedStyle18sp"
        android:layout_marginTop="@dimen/d15dp"
        android:text="@string/agree_agreement_register"
        />
    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/d15dp"
        android:layout_marginLeft="@dimen/d15dp"
        android:layout_marginTop="@dimen/d10dp"
        style="@style/TextBlack1Style11sp"
        android:text="@string/king_agree_register"
        android:gravity="center"
        />
</LinearLayout>