<?xml version="1.0" encoding="utf-8"?>
<com.example.jasonutil.keyboard.AutoHeightLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/activity_top_red" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50dp"
            android:paddingLeft="@dimen/d15dp"
            android:paddingRight="@dimen/d15dp">

            <CheckBox
                android:id="@+id/tv_area_code"
                style="@style/TextBlack1Style17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/selector_code"
                android:enabled="false"
                android:text="+86" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/TextBlack1Style17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/d20dp"
                android:layout_toRightOf="@+id/tv_area_code"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pleass_input_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="@color/gray9" />
        </RelativeLayout>

        <View
            style="@style/HorizontalBoundaryStyle"
            android:layout_marginLeft="@dimen/d15dp"
            android:layout_marginRight="@dimen/d15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50dp"
            android:layout_marginRight="@dimen/d15dp">

            <EditText
                android:id="@+id/et_password"
                style="@style/TextBlack1Style17sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50dp"
                android:layout_marginLeft="@dimen/d15dp"
                android:layout_toLeftOf="@+id/eye"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pleass_input_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/gray9" />

            <ImageView
                android:id="@+id/eye"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/d15dp"
                android:src="@drawable/password_selector" />

        </RelativeLayout>

        <View
            style="@style/HorizontalBoundaryStyle"
            android:layout_marginLeft="@dimen/d15dp"
            android:layout_marginRight="@dimen/d15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d15dp"
            android:layout_marginRight="@dimen/d15dp">

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/d5dp"
                android:paddingBottom="@dimen/d5dp"
                android:text="@string/forget_password"
                android:textColor="@color/select_red"
                android:textSize="@dimen/d11sp" />

            <TextView
                android:id="@+id/tv_cannot_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="@dimen/d5dp"
                android:paddingBottom="@dimen/d5dp"
                android:text="@string/cannot_receive_verification_code"
                android:textColor="@color/select_red"
                android:textSize="@dimen/d11sp"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/tv_login"
            style="@style/BtRedStyle18sp"
            android:layout_marginTop="@dimen/d15dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/tv_registered"
            style="@style/BtGaryStyle18sp"
            android:layout_marginTop="@dimen/d15dp"
            android:text="@string/registered" />
    </LinearLayout>
</com.example.jasonutil.keyboard.AutoHeightLayout>